SpriteElements now have separate values for x scale and y scale
Made it possible for sprites to stretch and squish on one axis. This
required changes to SEInfo as well. I made SEInfo use existing
structures like Vector2 and Color for it's values.

--- a/Virulent/Virulent.csproj
+++ b/Virulent/Virulent.csproj
@@ -37,6 +37,9 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="SDL.dll" />
+    <None Include="doc\Classes.txt" />
+    <None Include="doc\Design.txt" />
+    <None Include="doc\Milestones.txt" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -86,5 +89,6 @@
     <Folder Include="Storage\" />
     <Folder Include="util\" />
     <Folder Include="World\" />
+    <Folder Include="doc\" />
   </ItemGroup>
 </Project>
